collapsed menu fixed

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,3 +1,5 @@
+// navbar
+
 .bg-light {
   background-color: #001525 !important;
   position: fixed;
@@ -6,26 +8,31 @@
   padding-bottom: 5px;
 }
 
-.dropdown-menu {
-  margin: 20px 0 0;
-}
-
 .navbar-brand img {
   width: 145px;
 }
 
+// navbar links
+
 .navbar-light .navbar-nav .nav-link {
-    color: white;
-    opacity: 0.7;
+  color: white;
+  opacity: 0.7;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
 
 .navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
-    color: white;
-    opacity: 1;
+  color: white;
+  opacity: 50;
 }
 
 .navbar-light .navbar-nav .show > .nav-link, .navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .nav-link.active {
-    color: white;
+  color: white;
+}
+
+// dropdown
+
+.dropdown-menu {
+  margin: 17px 0 0;
 }
 
 .navbar-nav > li > .dropdown-menu {
@@ -36,67 +43,48 @@
 }
 
 .dropdown-item {
-    display: block;
-    width: 100%;
-    padding: 0.25rem 1.5rem;
-    clear: both;
-    font-weight: 400;
-    color: white;
-    opacity: 0.7;
-    text-align: inherit;
-    white-space: nowrap;
-    background-color: transparent;
-    border: 0;
-    padding-left: 8px;
+  display: block;
+  width: 100%;
+  padding: 0.25rem 1.5rem;
+  clear: both;
+  font-weight: 400;
+  color: white;
+  opacity: 0.7;
+  text-align: inherit;
+  white-space: nowrap;
+  background-color: transparent;
+  border: 0;
+  padding-left: 8px;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
 
 .dropdown-item:hover, .dropdown-item:focus {
-    color: white;
-    opacity: 1;
-    text-decoration: none;
-    background-color: transparent;
+  color: white;
+  opacity: 1;
+  text-decoration: none;
+  background-color: transparent;
 }
 
+    .navbar .navbar-collapse {
+       background-color: #your-color;
+       color: #your-color;
+    }
 
+// burger menu
 
-// .bg-light {
-//   background-color: #001525 !important;
-//   position: fixed;
-//   width: 100%;
-// }
+@media (max-width: 768px)  {
+  #navbarSupportedContent {
+    height: 100vh !important;
+  }
 
-// .navbar-brand img {
-//   position: relative;
-//   bottom: 60px;
-// }
+  .navbar-light .navbar-nav .nav-link {
+    font-size: 20px;
+    padding-top: 30px;
+    padding-left: 9px;
+  }
 
-// .navbar-light .navbar-toggler {
-//   position: relative;
-//   bottom: 60px;
-// }
+  .dropdown-item {
+    padding-left: 11px;
+  }
 
-// .navbar-collapse {
-//   position: relative;
-//   bottom: 60px;
-// }
-
-// .navbar-light .navbar-nav .show > .nav-link, .navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .nav-link.active {
-//   color: white !important;
-// }
-
-// @media (min-width: 992px) {
-//   .navbar-brand img {
-//     position: relative;
-//     bottom: 0px;
-//   }
-
-//   .navbar-light .navbar-toggler {
-//     position: relative;
-//     bottom: 0px;
-//   }
-
-//   .navbar-collapse {
-//     position: relative;
-//     bottom: 0px;
-//   }
-// }
+}
