--- a/app/assets/stylesheets/components/_slider.scss
+++ b/app/assets/stylesheets/components/_slider.scss
@@ -30,7 +30,7 @@
   bottom:0;
   left:0;
   right:0;
-  background:rgba(0,0,0,0.4);
+  background:rgba(0,0,0,0.6);
 }
 
 .carousel-control-next-icon {
