--- a/app/assets/stylesheets/pages/_contact.scss
+++ b/app/assets/stylesheets/pages/_contact.scss
@@ -3,7 +3,7 @@
   background-size: cover;
   background-position: center;
   box-shadow: 0 16px 40px rgba(0,0,0,0.12);
-  height: 90vh;
+  height: 100vh;
   position: relative;
 }
 
